@@ -1,48 +1,25 @@
 // Button
 //––––––––––––––––––––––––––––––––––––––––––––––––––
 
-// default buttons and inputs
+// default buttons style
 .button {
-    display: inline-block;
-    padding: $button-padding-y $button-padding-x;
-    color: $font-color;
-    text-align: center;
-    font-family: $base-font-family;
-    font-size: $button-font-size;
-    font-weight: $button-font-weight;
-    line-height: 1.25;
-    text-decoration: none;
-    white-space: nowrap;
-    background-color: $button-default-bg-color;
-    border-radius: $global-radius;
-    border: 1px solid $border-color;
-    cursor: pointer;
-    box-sizing: border-box;
-    user-select: none;
-    &:hover,
-    &:focus {
-        color: $font-color;
-        border-color: darken($border-color, $darken-hover-percent);
-        outline: 0;
-    }
+    @include button;
+    @include button-hover($font-color, $button-default-bg-color, darken($border-color, $darken-hover-percent))
 }
 
-// button variations
+// button color variations
 @each $button, $colors in $buttons {
-    
-    // start with a border x % of the main background
-    $default-border-color: darken(nth($colors, 1), 5%);
+    // start with a border color half of the $darken-hover-percent to get a slight visual contrast
+    $btn-border: darken(nth($colors, 1), ($darken-hover-percent / 2));
+    $btn-font: nth($colors, 2);
+    $btn-bg: nth($colors, 1);
+
+    // then when we roll over we will user the full percentage to adjust the colors
+    $btn-border-hover: darken($btn-border, $darken-hover-percent);
+    $btn-bg-hover: darken($btn-bg, $darken-hover-percent);
 
     .button.button-#{$button} {
-        color: nth($colors, 2);
-        background-color: nth($colors, 1);
-        border-color: $default-border-color;
-        &:hover,
-        &:focus {
-            color: nth($colors, 2);
-            background-color: darken(nth($colors, 1), $darken-hover-percent);
-            border-color: darken($default-border-color, $darken-hover-percent);
-            outline: 0;
-        }
+        @include button-color-variation($btn-font, $btn-bg, $btn-border);
+        @include button-hover($btn-font, $btn-bg-hover, $btn-border-hover);
     }
 }
