@@ -3,7 +3,11 @@ Changelog
 
 1.3.3 - IN DEVELOPMENT
 ~~~~~~~~~~~~~~~~~~~~~~
-
+ 
+ * Added 3 new mixin to build buttons:
+    - button
+    - button-color-variation
+    - button-hover
  * Created sample blog and thumbnail listing page
 
 1.3.2 - 19-Jul-2017
